--- a/citas/templates/doctor/dashboard_doctor.html
+++ b/citas/templates/doctor/dashboard_doctor.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Dashboard Doctor{% endblock %}
+{% block title %}Sitio Doctor{% endblock %}
 
 {% block extra_head %}
 <style>
