--- a/citas/templates/recepcion/dashboard.html
+++ b/citas/templates/recepcion/dashboard.html
@@ -98,7 +98,7 @@
             <div class="logo-placeholder">HSP</div>
             <div class="hospital-name">Hospital<br>San Pedro</div>
         </div>
-        <a href="{% url 'logout' %}" class="btn"><i class="fa-solid fa-right-from-bracket"></i> Salir</a>
+        <a href="{% url 'logout' %}" class="btn"><i class="fas fa-arrow-left"></i> Salir</a>
     </div>
     <div class="container">
         <div class="user-info">
